# gumloop-py

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  example.env  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: check  fmt  install.sh  sdk_examples.py  test
src/gumloop/: __init__.py  _auth.py  _client.py  _gumcp_transport.py  _http.py  agents.py  artifacts.py  auth.py  client.py  errors.py  mcp.py  oauth.py  sdk.py  sessions.py  skills.py  teams.py  types.py
src/gumloop/cli/: __init__.py  console.py  context.py  credentials.py  errors.py  main.py  oauth.py
src/gumloop/cli/commands/: __init__.py  _args_input.py  _downloads.py  _inputs.py  _renders.py  _sync_output.py  agents.py  artifacts.py  auth.py  brain.py  chat.py  mcp.py  sessions.py  skills.py  sync.py  update.py
src/gumloop/resources/: __init__.py  agents.py  artifacts.py  brain.py  chat.py  mcp.py  sessions.py  skills.py  sync.py  teams.py
src/gumloop/spec/: __init__.py  _compat.py  _extensions.py
src/gumloop/sync/: __init__.py  archive.py  bundle.py  bundle_validation.py  errors.py  hashing.py  installed.py  local_state.py  lock.py  markers.py  reconcile.py  reporting.py  results.py  run.py  scheduler.py  target_files.py  targets.py  wire.py
tests/: __init__.py  skill_sync_fixtures.py  test_client.py
tests/cli/: conftest.py  sync_scenario_helpers.py  sync_test_fakes.py  test_agents.py  test_args_input.py  test_artifacts.py  test_brain.py  test_chat.py  test_context.py  test_credentials.py  test_home_isolation.py  test_login.py  test_main.py  test_mcp.py  test_sessions.py  test_skills.py  test_sync_bundle.py  test_sync_command.py  test_sync_command_safety.py  test_sync_contract_fixtures.py  test_sync_enrollment.py  test_sync_fixture_corpus.py  test_sync_hashing.py  test_sync_installed.py  test_sync_reconciliation_safety.py  test_sync_scheduler_macos.py  test_sync_targets.py
tests/fixtures/skill_sync/v1/: README.md  catalog.json  corpus.sha256
tests/fixtures/skill_sync/v1/archives/: generated-bundle-transfer-limit.json
tests/fixtures/skill_sync/v1/hashes/: content-v1.json  manifest-v1.json
tests/fixtures/skill_sync/v1/manifests/: invalid-duplicate-identity.json  invalid-duplicate-install-name.json  invalid-manifest-hash.json  newer-than-plan.json  normal-bundle.json
tests/fixtures/skill_sync/v1/responses/: available-scopes-plan.json  below-pro.json  cli-upgrade-required.json  lost-membership.json  normal-empty-plan.json  normal-plan.json  unsupported-response-version.json
tests/integration/: _matrix.py  conftest.py  test_live.py  test_live_chat_models.py  test_live_chat_models_cli.py
tests/sdk/: conftest.py  helpers.py  test_agents.py  test_artifacts.py  test_auth.py  test_brain.py  test_chat.py  test_client.py  test_convenience.py  test_errors.py  test_gumcp_transport.py  test_mcp.py  test_oauth.py  test_sessions.py  test_skills.py  test_stream_retry.py  test_sync.py  test_teams.py
