[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gumloop"
version = "0.3.3"
description = "Python client for the Gumloop API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rahul Behal", email = "rahul@gumloop.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.24.1",
    "httpx-sse>=0.4.0",
    "keyring>=24",
    # Spec source of truth — we import only openrouter.components.*.
    # Exact pin: Speakeasy 0.x can rename fields on any bump.
    "openrouter==0.9.1",
    "pydantic>=2.0.0",
    "questionary>=2.0",
    "rich",
    "click>=8.0",
    "typer>=0.25.1",
]

[project.scripts]
gumloop = "gumloop.cli.main:main"

[project.urls]
Homepage = "https://github.com/gumloop/gumloop-py"
"Bug Tracker" = "https://github.com/gumloop/gumloop-py/issues"

[dependency-groups]
dev = [
    "pre-commit>=2.21.0",
    "pyright>=1.1.409",
    "pytest>=7.4.4",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=0.21.1",
    "respx>=0.21.1",
    "ruff>=0.15.12",
]
build = [
    "build>=1.0.0",
    "hatchling>=1.18.0",
    "twine>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits the real Gumloop API and upstream providers; opt-in via `-m live`",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "TID",  # flake8-tidy-imports (bans relative imports above parent, etc.)
    "ICN",  # flake8-import-conventions (canonical aliases like `import numpy as np`)
    "PTH",  # flake8-use-pathlib (prefer pathlib over os.path)
]

[tool.ruff.lint.isort]
# Force absolute imports and one import per line — keeps diffs clean and
# makes refactors trivial. Matches the convention every serious Python
# SDK ships (openai, stripe, anthropic).
force-single-line = true
known-first-party = ["gumloop"]
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = true

[tool.ruff.lint.flake8-tidy-imports]
# Disallow `from ..foo import bar` — only same-package relative imports
# are allowed. Beyond that, use absolute imports.
ban-relative-imports = "parents"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# `from __future__ import annotations` is meaningless in __init__ shims.
"src/gumloop/__init__.py" = ["F401", "I002"]

[tool.pyright]
typeCheckingMode = "standard"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
